--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,17 @@
-[tool.poetry]
-name = "job-match-ml"
-version = "0.1.0"
-description = ""
-authors = ["AstuteVision"]
-readme = "README.md"
-packages = [{include = "job_match"}]
+[tool.kedro]
+package_name = "job_match_ml"
+project_name = "job-match-ml"
+kedro_init_version = "0.18.14"
 
-[tool.poetry.dependencies]
-python = "~3.10"
-opendatasets = "^0.1.22"
-python-dotenv = "^1.0.0"
-gdown = "^4.7.1"
+[tool.isort]
+profile = "black"
 
+[tool.pytest.ini_options]
+addopts = """
+--cov-report term-missing \
+--cov src/job_match_ml -ra"""
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.5.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.coverage.report]
+fail_under = 0
+show_missing = true
+exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
