--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,3 +15,5 @@ pytest~=7.2
 # Pin problematic traitlets release -  https://github.com/jupyter/notebook/issues/7048
 traitlets<5.10.0
 gdown~=4.7.1
+natasha~=1.6.0
+wget~=3.2
