--- a/conf/base/parameters_evaluation.yml
+++ b/conf/base/parameters_evaluation.yml
@@ -3,3 +3,6 @@
 #
 # Documentation for this file format can be found in "Parameters"
 # Link: https://docs.kedro.org/en/0.18.14/configuration/parameters.html
+
+navec_model_name: "navec"
+e5_model_name: "model_e5"
