--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -26,6 +26,23 @@ predictions_navec:
   type: pandas.CSVDataSet
   filepath: "data/07_model_output/predictions_navec.csv"
 
+predictions_e5:
+  type: pandas.CSVDataSet
+  filepath: "data/07_model_output/predictions_e5.csv"
+
+predictions_mp5:
+  type: pandas.CSVDataSet
+  filepath: "data/07_model_output/predictions_mp5.csv"
+
 evaluation_navec:
     type: pandas.CSVDataSet
     filepath: "data/08_reporting/evaluation_navec.csv"
+
+evaluation_e5:
+    type: pandas.CSVDataSet
+    filepath: "data/08_reporting/evaluation_e5.csv"
+
+evaluation_mp5:
+    type: pandas.CSVDataSet
+    filepath: "data/08_reporting/evaluation_mp5.csv"
+
